kubernetes/apps/homelab/miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
spec:
  selector:
    matchLabels:
      app: miniflux
  replicas: 1
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
      - name: miniflux
        image: miniflux/miniflux:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
