kubernetes/apps/homelab/miniflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  labels:
    app: miniflux
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: miniflux
