kubernetes/apps/homelab/miniflux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: miniflux.murtazau.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miniflux
            port:
              number: 80
  tls:
  - hosts:
    - miniflux.murtazau.xyz
    secretName: miniflux-tls
